Init mobile and tablet header and hero

--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -9,6 +9,12 @@
   }
 }
 
+@mixin mobile {
+  @media screen and (min-width: 480px) {
+    @content;
+  }
+}
+
 @mixin section-tittle($color) {
   font-family: Seymour One;
   font-size: 36px;
