--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @use './partials/advantages';
 @use './partials/main-styles';
 @use './partials/vars';
+@use './partials/hero';
 
 @import './mixins';
 
