--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -5,28 +5,28 @@
       <svg class="advantages-icon" width="36" height="36">
         <use href="./images/icons-ice_cream.svg#icon-cow"></use>
       </svg>
-      <p class="advantages-list_number">721</p>
-      <p class="advantages-list_text">
+      <p class="advantages-list__number">721</p>
+      <p class="advantages-list__text">
         Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
       </p>
     </li>
-    <li class="advantages-list_element">
+    <li class="advantages-list__element">
       <svg class="advantages-icon" width="36" height="36">
         <use href="./images/icons-ice_cream.svg#icon-weight"></use>
       </svg>
-      <p class="advantages-list_number">16kg</p>
-      <p class="advantages-list_text">
+      <p class="advantages-list__number">16kg</p>
+      <p class="advantages-list__text">
         Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
       </p>
     </li>
-    <li class="advantages-list_element">
+    <li class="advantages-list__element">
       <svg class="advantages-icon" width="36" height="36">
         <use href="./images/icons-ice_cream.svg#icon-ice-crema">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </use>
       </svg>
-      <p class="advantages-list_number">84</p>
-      <p class="advantages-list_text">
+      <p class="advantages-list__number">84</p>
+      <p class="advantages-list__text">
         Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
       </p>
     </li>
