--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,12 +5,12 @@
 
 // Style dla pliku z przykładem HTML fragmentu
 
-@use './partials/advantages';
+@import './partials/advantages';
 @use './partials/main-styles';
 @use './partials/vars';
 
 @import './mixins';
-
+@import './partials/advantages';
 @import './partials/header';
 
 @import './partials/products';
