--- a/src/sass/partials/_advantages.scss
+++ b/src/sass/partials/_advantages.scss
@@ -1,12 +1,24 @@
-advantages-header {
-  opacity: 0;
+ul {
+  list-style-type: none;
 }
-advantages-list {
+.advantages {
+  background-color: #84a178;
+}
+.advantages-header:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+.advantages-list {
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
-  &_number {
-    color: #fcfcfc;
+  &__number #fcfcfc {
+    color: $textWhite;
     text-align: center;
     font-size: 58px;
     font-family: Montserrat;
@@ -15,7 +27,7 @@ advantages-list {
     line-height: normal;
     letter-spacing: 2.32px;
   }
-  &_text {
+  &__text {
     color: #fcfcfc;
     text-align: center;
     font-size: 16px;
@@ -26,7 +38,7 @@ advantages-list {
   }
   advantages-icon {
     border-radius: 25px;
-    background: #f8d24e;
+    background-color: #f8d24e;
   }
 }
 @media screen and (min-width: 768px) {
