--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,7 +12,7 @@
 @import './mixins';
 
 @import './partials/header';
-
+@import './partials/buttons';
 @import './partials/products';
 @import './partials/about';
 @import './partials/review';
