init part of desktop header&hero

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,6 +9,12 @@
         <use href="./images/icons-ice_cream.svg#icon-eva_menu-fill"></use>
       </svg>
     </button>
+    <nav class="header__nav">
+      <li>Home</li>
+      <li>How it&apos;s made?</li>
+      <li>Our products</li>
+      <li>Contact</li>
+    </nav>
     <button class="buy-now">
       <span class="buy-now__text">Buy now</span>
       <svg class="buy-now__svg">
