--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -6,18 +6,19 @@
     </div>
     <div class="about__content-flex-container">
       <div class="about__img-container">
-        <img class="about__img"
-                alt="A cow eating grass with trees in the background."
-                src="./images/about/cow-photo-279w.webp"
-                srcset="
-                    ./images/about/cow-photo-279w.webp 279w,
-                    ./images/about/cow-photo-330w.webp 330w,
-                    ./images/about/cow-photo-490w.webp 490w,
-                    ./images/about/cow-photo-558w.webp 558w,
-                    ./images/about/cow-photo-660w.webp 660w,
-                    ./images/about/cow-photo-980w.webp 980w
-                "
-              />
+        <img
+          class="about__img"
+          alt="A cow eating grass with trees in the background."
+          src="./images/about/cow-photo-279w.webp"
+          srcset="
+            ./images/about/cow-photo-279w.webp 279w,
+            ./images/about/cow-photo-330w.webp 330w,
+            ./images/about/cow-photo-490w.webp 490w,
+            ./images/about/cow-photo-558w.webp 558w,
+            ./images/about/cow-photo-660w.webp 660w,
+            ./images/about/cow-photo-980w.webp 980w
+          "
+        />
       </div>
       <div class="about__txt-and-btn-container">
         <p class="about__texts">
@@ -51,7 +52,14 @@
   </button>
   <p class="read-more-modal__tittle">How it's made?</p>
   <div class="read-more-modal__video-frame">
-    <iframe class="read-more-modal__video" src="https://www.youtube.com/embed/7gJIyHnD710" title="7 Easy Homemade Ice Cream Recipes" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></iframe>
+    <iframe
+      class="read-more-modal__video"
+      src="https://www.youtube.com/embed/7gJIyHnD710"
+      title="7 Easy Homemade Ice Cream Recipes"
+      frameborder="0"
+      allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen
+    ></iframe>
   </div>
   <p class="read-more-modal__text">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
