--- a/src/sass/partials/_gallery.scss
+++ b/src/sass/partials/_gallery.scss
@@ -1,11 +1,27 @@
 .gallery {
+  display: flex;
   max-width: 240px;
-  background-image: url('../images/demo.jpg');
-  background-size: cover;
-  background-position: center;
-  text-align: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  max-width: 767px;
   margin: 0 auto;
+  background-image: url('../images/Backgroud_mobile 1x.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  margin: 0 auto;
+  &__image {
+    position: fixed;
+    &--img {
+      position: relative;
+    }
+  }
+}
+
+.visually-hidden:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
