--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,7 @@
 @use './partials/main-styles';
 @use './partials/vars';
 @use './partials/hero';
-
+@use './partials/contacts';
 @import './mixins';
 
 @import './partials/header';
