--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -1,30 +1,30 @@
 
 
-<div class="review">
+<div class="swiper">
   <!-- Additional required wrapper -->
-  <div class="review__wrapper">
+  <div class="swiper__wrapper">
     <!-- Slides -->
 
-    <ul class="review__list">
-      <li class="review__slide">
+    <div class="swiper__slide">
+     
         <img class="review__pic" src="./images/clients/panifront.jpg" alt="pani z frontu" />
-        <div class="review__opinion"
+        <textarea class="review__opinion">
           >I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
-          addition, you have beautiful serving, cozy atmosphere and polite staff</div
+          addition, you have beautiful serving, cozy atmosphere and polite staff</textarea
         >
-        <div class="review__name">Emily, Los Angeles</div>
-      </li>
+        <span class="review__name">Emily, Los Angeles</span>
+        </div>
 
-      <li class="review__slide">
+      <div class="swiper__slide">
         <img class="review__pic" src="./images/clients/pani2.jpg" alt="pani druga" />
-        <div class="review__opinion"
+        <textarea class="review__opinion"
           >Ice cream is my passion! I love your chocolate hazelnut ice cream! And I really like the excellent service - always served politely and quickly!
-          </div
+        </textarea
         >
-        <div class="review__name">Diana, Chicago</div>
+        <span class="review__name">Diana, Chicago</span>
       </li>
 
-      <li class="review__slide">
+     <!--- <li class="review__slide">
         <img class="review__pic" src="./images/clients/pan.jpg" alt="pani w czapce" />
         <div class="review__opinion"
           >Every day we come to you with friends after classes in college. We love your ice cream and casual atmosphere!
@@ -32,12 +32,12 @@
           </div
         >
         <div class="review__name">Bryan, New-York</div>
-      </li>
+      </li>-->
 
 
 
 
-    </ul>
+    
 
     </div>
     ...
