--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -8,18 +8,18 @@
     <div class="swiper__slide">
      
         <img class="review__pic" src="./images/clients/panifront.jpg" alt="pani z frontu" />
-        <textarea class="review__opinion">
+        <span class="review__opinion">
           >I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
-          addition, you have beautiful serving, cozy atmosphere and polite staff</textarea
+          addition, you have beautiful serving, cozy atmosphere and polite staff</span
         >
         <span class="review__name">Emily, Los Angeles</span>
         </div>
 
       <div class="swiper__slide">
         <img class="review__pic" src="./images/clients/pani2.jpg" alt="pani druga" />
-        <textarea class="review__opinion"
+        <span class="review__opinion"
           >Ice cream is my passion! I love your chocolate hazelnut ice cream! And I really like the excellent service - always served politely and quickly!
-        </textarea
+        </span
         >
         <span class="review__name">Diana, Chicago</span>
       </li>
