--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -1,30 +1,27 @@
-
-
 <div class="swiper">
   <!-- Additional required wrapper -->
   <div class="swiper__wrapper">
     <!-- Slides -->
 
     <div class="swiper__slide">
-     
-        <img class="review__pic" src="./images/clients/panifront.jpg" alt="pani z frontu" />
-        <span class="review__opinion">
-          >I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
-          addition, you have beautiful serving, cozy atmosphere and polite staff</span
-        >
-        <span class="review__name">Emily, Los Angeles</span>
-        </div>
+      <img class="review__pic" src="./images/clients/panifront.jpg" alt="pani z frontu" />
+      <span class="review__opinion">
+        >I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
+        addition, you have beautiful serving, cozy atmosphere and polite staff</span
+      >
+      <span class="review__name">Emily, Los Angeles</span>
+    </div>
 
-      <div class="swiper__slide">
-        <img class="review__pic" src="./images/clients/pani2.jpg" alt="pani druga" />
-        <span class="review__opinion"
-          >Ice cream is my passion! I love your chocolate hazelnut ice cream! And I really like the excellent service - always served politely and quickly!
-        </span
-        >
-        <span class="review__name">Diana, Chicago</span>
-      </li>
+    <div class="swiper__slide">
+      <img class="review__pic" src="./images/clients/pani2.jpg" alt="pani druga" />
+      <span class="review__opinion"
+        >Ice cream is my passion! I love your chocolate hazelnut ice cream! And I really like the
+        excellent service - always served politely and quickly!
+      </span>
+      <span class="review__name">Diana, Chicago</span>
+    </div>
 
-     <!--- <li class="review__slide">
+    <!--- <li class="review__slide">
         <img class="review__pic" src="./images/clients/pan.jpg" alt="pani w czapce" />
         <div class="review__opinion"
           >Every day we come to you with friends after classes in college. We love your ice cream and casual atmosphere!
@@ -34,18 +31,9 @@
         <div class="review__name">Bryan, New-York</div>
       </li>-->
 
-
-
-
-    
-
-    
-    ...
+    <!-- If we need pagination -->
+    <div class="review__pagination"></div>
   </div>
-  <!-- If we need pagination -->
-  <div class="review__pagination"></div>
-
- 
 
   <!-- If we need navigation buttons -->
   <!--<div class="swiper-button-prev"></div>
