--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -6,7 +6,7 @@
     <div class="swiper__slide review">
       <img class="review__pic" src="./images/clients/panifront.jpg" alt="pani z frontu" />
       <span class="review__opinion">
-        >I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
+        I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
         addition, you have beautiful serving, cozy atmosphere and polite staff</span
       >
       <span class="review__name">Emily, Los Angeles</span>
@@ -21,15 +21,14 @@
       <span class="review__name">Diana, Chicago</span>
     </div>
 
-    <!--- <li class="review__slide">
-        <img class="review__pic" src="./images/clients/pan.jpg" alt="pani w czapce" />
-        <div class="review__opinion"
-          >Every day we come to you with friends after classes in college. We love your ice cream and casual atmosphere!
-
-          </div
-        >
-        <div class="review__name">Bryan, New-York</div>
-      </li>-->
+    <div class="swiper__slide">
+      <img class="review__pic" src="./images/clients/pan.jpg" alt="pani w czapce" />
+      <span class="review__opinion"
+        >Every day we come to you with friends after classes in college. We love your ice cream and
+        casual atmosphere!
+      </span>
+      <span class="review__name">Bryan, New-York</span>
+    </div>
 
     <!-- If we need pagination -->
     <div class="review__pagination"></div>
