--- a/src/sass/partials/_review.scss
+++ b/src/sass/partials/_review.scss
@@ -1,7 +1,12 @@
 .swiper {
   display: flex;
-  width: 600px;
-  height: 300px;
+  justify-content: center;
+  padding: 0;
+  justify-content: center;
+  padding-top: 80px;
+
+  //width: 600px;
+  //height: 300px;
 
   &__slide {
     display: flex;
