--- a/src/sass/partials/_review.scss
+++ b/src/sass/partials/_review.scss
@@ -10,7 +10,7 @@
 
   &__slide {
     display: flex;
-    flex-direction: column;
+    //flex-direction: column;
     justify-content: center;
     margin: 0;
   }
