--- a/src/sass/partials/_review.scss
+++ b/src/sass/partials/_review.scss
@@ -8,12 +8,12 @@
   //width: 600px;
   //height: 300px;
 
-  &__slide {
-    display: flex;
-    //flex-direction: column;
-    justify-content: center;
-    margin: 0;
-  }
+  //&__slide {
+  //display: flex;
+  //flex-direction: column;
+  //justify-content: center;
+  //margin: 0;
+  //}
 }
 
 .review {
