--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -3,7 +3,7 @@
   <div class="swiper__wrapper">
     <!-- Slides -->
 
-    <div class="swiper__slide review">
+    <div class="swiper__slide">
       <img class="review__pic" src="./images/clients/panifront.jpg" alt="pani z frontu" />
       <span class="review__opinion">
         I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
