--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -1,6 +1,6 @@
 <div class="swiper">
   <!-- Additional required wrapper -->
-  <div class="swiper__wrapper">
+  <div class="swiper-wrapper">
     <!-- Slides -->
 
     <div class="swiper__slide">
