--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -3,7 +3,7 @@
   <div class="swiper-wrapper">
     <!-- Slides -->
 
-    <div class="swiper__slide">
+    <div class="swiper-slide">
       <img class="review__pic" src="./images/clients/panifront.jpg" alt="pani z frontu" />
       <span class="review__opinion">
         I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
@@ -12,7 +12,7 @@
       <span class="review__name">Emily, Los Angeles</span>
     </div>
 
-    <div class="swiper__slide">
+    <div class="swiper-slide">
       <img class="review__pic" src="./images/clients/pani2.jpg" alt="pani druga" />
       <span class="review__opinion"
         >Ice cream is my passion! I love your chocolate hazelnut ice cream! And I really like the
@@ -21,7 +21,7 @@
       <span class="review__name">Diana, Chicago</span>
     </div>
 
-    <div class="swiper__slide">
+    <div class="swiper-slide">
       <img class="review__pic" src="./images/clients/pan.jpg" alt="pani w czapce" />
       <span class="review__opinion"
         >Every day we come to you with friends after classes in college. We love your ice cream and
