--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -31,12 +31,12 @@
     </div>
 
     <!-- If we need pagination -->
-    <div class="review__pagination"></div>
+    <div class="review-pagination"></div>
   </div>
 
   <!-- If we need navigation buttons -->
-  <div class="swiper-button-prev"></div>
-  <div class="swiper-button-next"></div>
+  <!--<div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>-->
 
   <!-- If we need scrollbar -->
   <!--<div class="swiper-scrollbar"></div>-->
