--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -31,7 +31,7 @@
     </div>
 
     <!-- If we need pagination -->
-    <div class="review-pagination"></div>
+    <div class="swiper-pagination"></div>
   </div>
 
   <!-- If we need navigation buttons -->
