--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -2,6 +2,7 @@
   <div class="container">
   <p class="products__label" id="100% natural">100% natural</p>
   <h2 class="products__title">products</h2>
+  <ul class="products__list">
   <div class="ice-cream">
     <h3 class="products__name">ice cream</h3>
     <p class="products__text">Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
@@ -29,6 +30,7 @@
       <svg width="40" height="16"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
     </button>
   </div>
+  </ul>
   </div>
 </section>
 
@@ -74,7 +76,7 @@
           placeholder="Comment"
         ></textarea>
       </label>
-      <button class="modal__button--disabled" type="submit">Submit</button>
+      <button class="modal__button" type="submit">Submit</button>
     </form>
   </div>
 </div>
