--- a/src/sass/partials/_products.scss
+++ b/src/sass/partials/_products.scss
@@ -1,10 +1,29 @@
+@import '../mixins';
+@import './vars';
+.container {
+  max-width: 380px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+  @include tablet {
+    max-width: 768px;
+  }
+  @include desktop {
+    max-width: 1200px;
+  }
+}
 .products {
   background-image: url(../images/Backgroud_mobile@1x.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100%;
-  margin: 0 auto;
+
+  @include tablet {
+    background-image: url(../images/Background_tablet@1x.jpg);
+  }
+  @include desktop {
+    background-image: url(../images/Backgroud_desktop@1x.jpg);
+  }
 
   &__label {
     color: #131313;
@@ -15,9 +34,15 @@
     text-transform: uppercase;
     text-align: center;
     padding-top: 60px;
+    @include tablet {
+      font-size: 22px;
+    }
+    @include desktop {
+      font-size: 30px;
+    }
   }
   &__title {
-    color: #131313;
+    color: $textBlack;
     font-family: 'Seymour One', sans-serif;
     font-weight: 400;
     font-size: 30px;
@@ -25,29 +50,64 @@
     text-transform: uppercase;
     text-align: center;
     margin-top: 12px;
+    @include tablet {
+      font-size: 34px;
+    }
+    @include desktop {
+      font-size: 36px;
+    }
+  }
+  &__list {
+    @include tablet {
+      display: flex;
+      gap: 16px;
+    }
+    @include desktop {
+      display: flex;
+      gap: 29px;
+    }
   }
   &__name {
-    color: #131313;
+    color: $textBlack;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     font-size: 20px;
     line-height: 1.22;
     text-transform: uppercase;
     text-align: center;
+    @include tablet {
+      font-size: 22px;
+    }
+    @include desktop {
+      font-size: 30px;
+    }
   }
   &__text {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.77;
+    letter-spacing: 0.04em;
     text-align: center;
     margin-top: 40px;
+    @include desktop {
+      font-size: 16px;
+      margin-top: 66px;
+      width: 242px;
+      margin: 0 auto;
+    }
+    @include tablet {
+      width: 172px;
+      margin: 0 auto;
+    }
   }
+
   &__button {
     background: none;
     border: none;
     margin: 0 auto;
-    display: block;
+    display: flex;
+    justify-content: flex-end;
   }
 }
 
@@ -58,6 +118,14 @@
   margin: 0 auto;
   margin-bottom: 60px;
   background-color: #aec6a5;
+  @include tablet {
+    width: 224px;
+    height: 548px;
+  }
+  @include desktop {
+    width: 370px;
+    height: 719px;
+  }
 }
 .ice-coffee {
   @extend .ice-cream;
@@ -88,11 +156,15 @@
 .modal {
   position: relative;
   margin: auto;
-  background-color: #fcfcfc;
-  border: 2px solid #f8d24e;
+  background-color: $textWhite;
+  border: 2px solid $secondaryBrandColor;
   border-radius: 10px;
   width: 280px;
   height: 968px;
+  @include desktop {
+    width: 568px;
+    height: 996px;
+  }
   &__close {
     display: flex;
     align-items: center;
@@ -101,35 +173,53 @@
     width: 20px;
     top: 12px;
     right: 12px;
-    background-color: #fcfcfc;
+    background-color: $textWhite;
     border: none;
     position: absolute;
+    @include desktop {
+      width: 24px;
+      height: 24px;
+    }
   }
   &__title {
     font-family: 'Seymour One', sans-serif;
     font-weight: 400px;
     font-size: 20px;
     line-height: 1.4;
-    color: #131313;
+    color: $textBlack;
+    display: block;
+    margin: 0 auto;
     margin-top: 28px;
-    display: flex;
-    flex-wrap: wrap;
+    width: 142px;
+    height: 56px;
+    @include desktop {
+      margin-top: 32px;
+    }
   }
   &__img {
     display: block;
     margin: 0 auto;
+    margin-top: 20px;
+    @include desktop {
+      margin-top: 24px;
+    }
   }
   &__button {
     font-weight: 600;
     font-family: 'Montserrat', sans-serif;
     line-height: 1.22;
-    width: 134px;
+    width: 132px;
     height: 42px;
     font-size: 14px;
-    background-color: #f8d24e;
-    border: 2px solid #f8d24e;
+    background-color: $secondaryBrandColor;
+    border: 2px solid $secondaryBrandColor;
     border-radius: 10px;
+    margin-top: 24px;
     cursor: pointer;
+    @include desktop {
+      width: 121px;
+      margin-top: 32px;
+    }
   }
 }
 .value {
@@ -137,6 +227,10 @@
   gap: 9px;
   list-style-position: inside;
   margin-top: 22px;
+  @include desktop {
+    margin-top: 24px;
+    gap: 20px;
+  }
   &__item {
     width: 53px;
     height: 72px;
@@ -146,9 +240,14 @@
     font-weight: 400;
     font-size: 10px;
     line-height: 1.22;
-    color: #131313;
+    color: $textBlack;
     margin: 0 auto;
     justify-content: flex-end;
+    @include desktop {
+      font-size: 12px;
+      width: 65px;
+      height: 90px;
+    }
   }
   &__roundborder {
     width: 43px;
@@ -156,18 +255,20 @@
     border-radius: 50px;
     background-color: #9cbe8f;
     border: 2px solid #9cbe8f;
-    display: flex;
-    justify-content: flex-start;
-  }
-  &__number {
-    display: flex;
-    align-items: center;
+    text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 10px;
     line-height: 2.8;
-    color: #131313;
+    color: $textBlack;
     margin: 0 auto;
+    display: flex;
+    justify-content: flex-start;
+    @include desktop {
+      font-size: 12px;
+      width: 53px;
+      height: 53px;
+    }
   }
 }
 .ingredients {
@@ -175,7 +276,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 1.4;
-  color: #131313;
+  color: $textBlack;
   text-align: center;
 
   &__list {
@@ -188,7 +289,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 1.76;
-    color: #131313;
+    color: $textBlack;
   }
 }
 .modal__form {
@@ -196,6 +297,14 @@
   flex-direction: column;
   gap: 16px;
   align-items: center;
+  width: 240px;
+  height: 200px;
+  margin: 0 auto;
+  margin-top: 40px;
+  @include desktop {
+    width: 368px;
+    margin-top: 48px;
+  }
 }
 .modal__input {
   font-weight: 400;
@@ -205,7 +314,7 @@
   font-size: 14px;
   line-height: 1.76;
   background-color: rgba(248, 210, 78, 0.1);
-  border: 1px solid #84a178;
+  border: 1px solid $firstBrandColor;
   border-radius: 10px;
 }
 .modal__feedback {
