--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -15,7 +15,7 @@
               class="footer__social-link"
             >
               <svg class="footer__social-icon">
-                <use href="./images/icons-ice_cream#icon-github"></use>
+                <use href="./images/icons-ice_cream.svg#icon-github"></use>
               </svg>
             </a>
           </li>
@@ -27,7 +27,7 @@
               class="footer__social-link"
             >
               <svg class="footer__social-icon">
-                <use href="./images/icons-ice_cream#icon-telegram"></use>
+                <use href="./images/icons-ice_cream.svg#icon-telegram"></use>
               </svg>
             </a>
           </li>
@@ -39,7 +39,7 @@
               class="footer__social-link"
             >
               <svg class="footer__social-icon">
-                <use href="./images/icons-ice_cream#icon-facebook"></use>
+                <use href="./images/icons-ice_cream.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
