--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -14,9 +14,9 @@
               rel="nofollow noopener noreferrer"
               class="footer__social-link"
             >
-              <svg class="footer__social-icon">
-                <use href="./images/icons-ice_cream#icon-github"></use>
-              </svg>
+              <!--<svg class="footer__social-icon">
+                <use href="./images/icons-ice_cream#icon-github.svg"></use>
+              </svg>-->
             </a>
           </li>
           <li class="footer__social-item">
@@ -26,9 +26,9 @@
               rel="nofollow noopener noreferrer"
               class="footer__social-link"
             >
-              <svg class="footer__social-icon">
-                <use href="./images/icons-ice_cream#icon-telegram"></use>
-              </svg>
+              <!--<svg class="footer__social-icon">
+                <use href="./images/icons-ice_cream#icon-telegram.svg"></use>
+              </svg>-->
             </a>
           </li>
           <li class="footer__social-item">
@@ -38,9 +38,9 @@
               rel="nofollow noopener noreferrer"
               class="footer__social-link"
             >
-              <svg class="footer__social-icon">
-                <use href="./images/icons-ice_cream#icon-facebook"></use>
-              </svg>
+              <!---- <svg class="footer__social-icon">
+                <use href="./images/icons-ice_cream#icon-facebook.svg"></use>
+              </svg>-->
             </a>
           </li>
         </ul>
