--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,7 +13,7 @@
 @import './mixins';
 
 @import './partials/header';
-
+@import './partials/gallery';
 @import './partials/footer';
 
 @import './partials/buttons';
