--- a/src/sass/partials/_review.scss
+++ b/src/sass/partials/_review.scss
@@ -4,6 +4,9 @@
 
   padding-top: 80px;
 
+  &-pagination {
+    background-color: red;
+  }
   //width: 600px;
   //height: 300px;
 
@@ -44,6 +47,7 @@
     display: flex;
 
     justify-content: center;
+    text-align: center;
     border-radius: 10px;
     margin-top: 32px;
     background: #84a178;
@@ -61,17 +65,19 @@
 
     letter-spacing: 0.04em;
     line-height: 2.25em;
-    margin-bottom: 32px;
+
     margin-right: 15px;
     margin-left: 15px;
   }
 
   &__name {
     display: flex;
+    justify-content: center;
     text-align: center;
     font-size: 20px;
     font-family: 'Monsterrat', sans-serif;
     font-weight: 500;
     padding-top: 32px;
+    margin-bottom: 50px;
   }
 }
