--- a/src/partials/buttons.html
+++ b/src/partials/buttons.html
@@ -1,29 +1,58 @@
-<button class="products-button" data modal open>Products</button>
-<button class="read-more-button" data modal open>
+<!-- button-products -->
+
+<button data-modal-open class="button-products" type="button">Products</button>
+<button class="button-products--disabled" type="button" disabled>Products</button>
+
+<br />
+<br />
+
+<!-- button-read-more -->
+
+<button data-modal-open class="button-read-more" type="button">
   Read more
-  <svg class="about__read-more-btn--svg">
-    <line x1="0" y1="0" x2="5" y2="5.5" stroke="#2a2a2a" stroke-width="2" />
-    <line x1="0" y1="10" x2="5" y2="4.5" stroke="#2a2a2a" stroke-width="2" />
-  </svg>
+  <svg height="10px" width="6px"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
 </button>
-<button class="how-its-made-button" data modal open>How it's made?</button>
-<button class="locations_button" data modal open>Our locations
-<svg class="about__read-more-btn--svg">
-    <line x1="0" y1="0" x2="5" y2="5.5" stroke="#2a2a2a" stroke-width="2" />
-    <line x1="0" y1="10" x2="5" y2="4.5" stroke="#2a2a2a" stroke-width="2" />
-    </svg>
+<button class="button-read-more--disabled" type="button" disabled>
+  Read more
+  <svg height="10px" width="6px"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
 </button>
-<button class="franchise_button" data modal open>Franchise
-    <svg class="about__read-more-btn--svg">
-    <line x1="0" y1="0" x2="5" y2="5.5" stroke="#2a2a2a" stroke-width="2" />
-    <line x1="0" y1="10" x2="5" y2="4.5" stroke="#2a2a2a" stroke-width="2" />
-    </svg>
+
+<br />
+<br />
+<!-- button-how-its-made -->
+
+<button data-modal-open class="button-how-its-made" type="button">How it's made?</button>
+<button class="button-how-its-made--disabled" type="button" disabled>How it's made?</button>
+
+<br />
+<br />
+<!-- button-our-location -->
+
+<button data-modal-open class="button-our-location" type="button">
+  Our location
+  <svg height="10px" width="6px"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
 </button>
+<button class="button-our-location--disabled" type="button" disabled>
+  Our location
+  <svg height="10px" width="6px"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
 </button>
-<button class="buy-now_button" data modal open>Buy now
-    <svg class="about__read-more-btn--svg">
-    <line x1="0" y1="0" x2="5" y2="5.5" stroke="#2a2a2a" stroke-width="2" />
-    <line x1="0" y1="10" x2="5" y2="4.5" stroke="#2a2a2a" stroke-width="2" />
-    </svg>
+
+<br />
+<br />
+<!-- button-franchise -->
+
+<button data-modal-open class="button-franchise" type="button">Franchise</button>
+<button class="button-franchise--disabled" type="button" disabled>Franchise</button>
+
+<br />
+<br />
+<!-- button-buy-now -->
+
+<button data-modal-open class="button-buy-now" type="button">
+  Buy now
+  <svg height="10px" width="6px"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
 </button>
+<button class="button-buy-now--disabled" type="button" disabled>
+  Buy now
+  <svg height="10px" width="6px"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
 </button>
