--- a/src/sass/partials/_review.scss
+++ b/src/sass/partials/_review.scss
@@ -5,7 +5,16 @@
   padding-top: 80px;
 
   &-pagination {
-    background-color: red;
+    width: 72px;
+
+    &-bullet {
+      width: 12px;
+      height: 12px;
+    }
+
+    &-bullet-active {
+      background-color: #84a178;
+    }
   }
   //width: 600px;
   //height: 300px;
@@ -23,7 +32,6 @@
 
   justify-content: center;
   padding: 0;
-  justify-content: center;
 
   // &__list {
   // list-style: none;
