buttons right svg

--- a/src/partials/buttons.html
+++ b/src/partials/buttons.html
@@ -10,11 +10,15 @@
 
 <button data-modal-open class="button-read-more" type="button">
   Read more
-  <svg height="10px" width="6px"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
+  <svg height="10px" width="6px">
+    <use href="./images/icons-ice_cream.svg#icon-arrow-right-bold"></use>
+  </svg>
 </button>
 <button class="button-read-more--disabled" type="button" disabled>
   Read more
-  <svg height="10px" width="6px"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
+  <svg height="10px" width="6px">
+    <use href="./images/icons-ice_cream.svg#icon-arrow-right-bold"></use>
+  </svg>
 </button>
 
 <br />
@@ -30,11 +34,15 @@
 
 <button data-modal-open class="button-our-location" type="button">
   Our location
-  <svg height="10px" width="6px"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
+  <svg height="10px" width="6px">
+    <use href="./images/icons-ice_cream.svg#icon-arrow-right-bold"></use>
+  </svg>
 </button>
 <button class="button-our-location--disabled" type="button" disabled>
   Our location
-  <svg height="10px" width="6px"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
+  <svg height="10px" width="6px">
+    <use href="./images/icons-ice_cream.svg#icon-arrow-right-bold"></use>
+  </svg>
 </button>
 
 <br />
@@ -50,9 +58,13 @@
 
 <button data-modal-open class="button-buy-now" type="button">
   Buy now
-  <svg height="10px" width="6px"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
+  <svg height="10px" width="6px">
+    <use href="./images/icons-ice_cream.svg#icon-arrow-right-bold"></use>
+  </svg>
 </button>
 <button class="button-buy-now--disabled" type="button" disabled>
   Buy now
-  <svg height="10px" width="6px"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
+  <svg height="10px" width="6px">
+    <use href="./images/icons-ice_cream.svg#icon-arrow-right-bold"></use>
+  </svg>
 </button>
