finished styles in header and hero

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,10 +10,10 @@
       </svg>
     </button>
     <nav class="header__nav">
-      <li>Home</li>
-      <li>How it&apos;s made?</li>
-      <li>Our products</li>
-      <li>Contact</li>
+      <li class="header__nav-item">Home</li>
+      <li class="header__nav-item">How it&apos;s made?</li>
+      <li class="header__nav-item">Our products</li>
+      <li class="header__nav-item">Contact</li>
     </nav>
     <button class="buy-now">
       <span class="buy-now__text">Buy now</span>
