--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -33,6 +33,9 @@
     <p class="hero__text">
       Indulge in a scoop of ice cream made with passion and treat your taste buds to an
       unforgettable experience!
+      <svg class="hero__arrow">
+        <use href="./images/icons-ice_cream.svg#icon-Arrow"></use>
+      </svg>
     </p>
 
     <img
@@ -54,5 +57,7 @@
     <svg class="hero__dots-tablet">
       <use href="./images/icons-ice_cream.svg#icon-kropki-tablet"></use>
     </svg>
+
+    <img class="hero__dots-desktop" src="./images/header/kropki-desktop.png" />
   </div>
 </section>
