--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -77,6 +77,11 @@
       font-weight: 700;
     }
   }
+
+  &__nav-item:hover,
+  &__nav-item:focus {
+    color: $secondaryBrandColor;
+  }
 }
 
 .buy-now {
@@ -86,6 +91,20 @@
   border-style: none;
   border-radius: 10px;
   display: none;
+
+  &:hover {
+    background-color: #0a8817;
+  }
+  &:focus {
+    background-color: #0a8817;
+    color: #fcfcfc;
+    fill: #fcfcfc;
+  }
+  &--disabled {
+    background-color: #ababab;
+    color: #000000;
+    pointer-events: none;
+  }
 
   @include tablet {
     display: flex;
