--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,34 +1,42 @@
 <section class="advantages">
-  <h2 class="advantages-header">advantages</h2>
-  <ul class="advantages-list">
-    <li class="advantages-list_element">
-      <svg class="advantages-icon" width="36" height="36">
-        <use href="./images/icons-ice_cream.svg#icon-cow"></use>
-      </svg>
-      <p class="advantages-list__number">721</p>
-      <p class="advantages-list__text">
-        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-      </p>
-    </li>
-    <li class="advantages-list__element">
-      <svg class="advantages-icon" width="36" height="36">
-        <use href="./images/icons-ice_cream.svg#icon-weight"></use>
-      </svg>
-      <p class="advantages-list__number">16kg</p>
-      <p class="advantages-list__text">
-        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-      </p>
-    </li>
-    <li class="advantages-list__element">
-      <svg class="advantages-icon" width="36" height="36">
-        <use href="./images/icons-ice_cream.svg#icon-ice-crema">
+  <div class="advantages-container">
+    <h2 class="advantages-header">advantages</h2>
+    <ul class="advantages-list">
+      <li class="advantages-list_element">
+        <div class="advantages-icon">
+          <svg width="36" height="36">
+            <use href="./images/icons-ice_cream.svg#icon-cow"></use>
+          </svg>
+        </div>
+        <p class="advantages-list__number">721</p>
+        <p class="advantages-list__text">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-        </use>
-      </svg>
-      <p class="advantages-list__number">84</p>
-      <p class="advantages-list__text">
-        Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-      </p>
-    </li>
-  </ul>
+        </p>
+      </li>
+      <li class="advantages-list__element">
+        <div class="advantages-icon">
+          <svg width="36" height="36">
+            <use href="./images/icons-ice_cream.svg#icon-weight"></use>
+          </svg>
+        </div>
+        <p class="advantages-list__number">16kg</p>
+        <p class="advantages-list__text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+      <li class="advantages-list__element">
+        <div class="advantages-icon">
+          <svg width="36" height="36">
+            <use href="./images/icons-ice_cream.svg#icon-ice-crema">
+              Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+            </use>
+          </svg>
+        </div>
+        <p class="advantages-list__number">84</p>
+        <p class="advantages-list__text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+    </ul>
+  </div>
 </section>
