--- a/src/sass/partials/_advantages.scss
+++ b/src/sass/partials/_advantages.scss
@@ -4,6 +4,18 @@ ul {
 .advantages {
   background-color: #84a178;
 }
+.advantages-container {
+  width: 100%;
+  max-width: 480px;
+  margin: 0 auto;
+  padding: 0 15px;
+  @include tablet {
+    max-width: 768px;
+  }
+  @include desktop {
+    max-width: 1200px;
+  }
+}
 .advantages-header:not(:focus):not(:active) {
   clip: rect(0 0 0 0);
   clip-path: inset(100%);
@@ -17,39 +29,60 @@ ul {
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
-  &__number #fcfcfc {
-    color: $textWhite;
+
+  &__number {
+    color: #fcfcfc;
     text-align: center;
-    font-size: 58px;
+    font-size: 36px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    letter-spacing: 2.32px;
+    letter-spacing: 1.44px;
+    text-transform: uppercase;
+    @include tablet {
+      font-size: 48px;
+      letter-spacing: 1.92px;
+    }
+    @include desktop {
+      font-size: 58px;
+      letter-spacing: 2.32px;
+    }
   }
   &__text {
     color: #fcfcfc;
     text-align: center;
-    font-size: 16px;
+    font-size: 12px;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 400;
     line-height: 176%;
+    @include tablet {
+      font-size: 14px;
+      line-height: 174%;
+    }
+    @include desktop {
+      font-size: 16px;
+      letter-spacing: 0.32px;
+    }
   }
-  advantages-icon {
-    border-radius: 25px;
-    background-color: #f8d24e;
+  &__element {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    @include tablet {
+      flex-direction: row;
+      gap: 12px;
+    }
+    @include desktop {
+      flex-direction: row;
+      gap: 12px;
+    }
   }
 }
-@media screen and (min-width: 768px) {
-  advantages-list {
-    display: flex;
-    flex-direction: row;
-  }
-}
-@media screen and (min-width: 1200px) {
-  advantages-list {
-    display: flex;
-    flex-direction: row;
-  }
+
+.advantages-icon {
+  border-radius: 25px;
+  background-color: #f8d24e;
 }
