--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -43,28 +43,45 @@
       </svg>
     </button>
     <p class="modal__title">Chololate icecream</p>
-    <img class="modal__img" alt="gałka lodów czekoladowych" src="./images/products/products-modal_mobile@1x.jpg"/>
-    <ul class="value">
-      <li class="value__item">kcal <div class="value__roundborder"> <span class="value__number">320</span> </div>
+    <img class="modal__img" alt="gałka lodów czekoladowych" src="./images/products/products-modal@1x.png"/>
+<div>
+<ul class="value">
+      <li class="value__item">
+        <div class="value__roundborder">
+          <span class="value__number">320</span>
+          <div><span class="value__legend">kcal</span></div>
+        </div>
       </li>
-      <li class="value__item">Prote... <div class="value__roundborder"> <span class="value__number">4g</span> </div>
+      <li class="value__item">
+        <div class="value__roundborder">
+          <span class="value__number">4g</span>
+          <div><span class="value__legend">Prote...</span></div>
+        </div>
       </li>
-      <li class="value__item">Fats <div class="value__roundborder"> <span class="value__number">8,2g</span> </div></li>
-      <li class="value__item">Carbs <div class="value__roundborder"> <span class="value__number">40,4g</span> </div></li>
+      <li class="value__item">
+        <div class="value__roundborder">
+          <span class="value__number">8,2g</span>
+          <div><span class="value__legend">Fats</span></div>
+        </div>
+      </li>
+      <li class="value__item">
+        <div class="value__roundborder">
+          <span class="value__number">40,4g</span>
+          <div><span class="value__legend">Carbs</span></div>
+        </div>
+      </li>
     </ul>
     <p class="ingredients">Ingredients</p>
-    <ul class="ingredients__list">
-      <li class="ingredients__item">Milk 100ml</li>
-      <li class="ingredients__item">Belgian chocolate 20g</li>
-      <li class="ingredients__item">Cream 150ml</li>
-      <li class="ingredients__item">Cocoa powder 30g</li>
-      <li class="ingredients__item">Sugar 40g</li>
-      <li class="ingredients__item">Vanilla sugar 10g</li>
-    </ul>
+    <div class="ingredients__box">
+  <div class="ingredients__item"><span>Milk</span><span>100ml</span></div>
+      <div class="ingredients__item"><span>Belgian chocolate</span><span>20g</span></div>
+      <div class="ingredients__item"><span>Cream</span><span>150ml</span></div>
+      <div class="ingredients__item"><span>Cocoa powder</span><span>30g</span></div>
+      <div class="ingredients__item"><span>Sugar</span><span>40g</span></div>
+      <div class="ingredients__item"><span>Vanilla sugar</span><span>10g</span></div>
+  </div>
     
     <form action="javascript:void(0);" method="POST"></form>
-
-
     <form class="modal__form">
           <input class="modal__input" type="text" name="name" id="user-name" placeholder="Name"required />
           <input class="modal__input" type="tel" name="phone" id="user=phone" placeholder="Phone"required />
