--- a/src/sass/partials/_review.scss
+++ b/src/sass/partials/_review.scss
@@ -1,5 +1,6 @@
 .swiper {
   justify-content: center;
+
   padding: 0;
 
   padding-top: 80px;
@@ -76,6 +77,32 @@
 
     margin-right: 15px;
     margin-left: 15px;
+
+    @include tablet {
+      font-size: 14px;
+      letter-spacing: 0.56px;
+      border-radius: 24x;
+      padding-bottom: 29px;
+      padding-top: 28px;
+      padding-right: 80px;
+      padding-left: 80px;
+
+      width: 705px;
+      margin: auto;
+    }
+
+    @include desktop {
+      font-size: 16px;
+      letter-spacing: 0.64px;
+      padding-bottom: 43px;
+      padding-top: 43px;
+      padding-right: 109px;
+      padding-left: 109px;
+
+      border-radius: 24px;
+      width: 968px;
+      margin: auto;
+    }
   }
 
   &__name {
@@ -87,5 +114,13 @@
     font-weight: 500;
     padding-top: 32px;
     margin-bottom: 50px;
+
+    @include tablet {
+      font-size: 16px;
+    }
+
+    @include desktop {
+      font-size: 16px;
+    }
   }
 }
